과제_Yena/2장 연습문제
>>> a=80
>>> b=75
>>> c=55
>>> (a+b+c)/3
70.0
>>> 13/2
6.5
>>> ""3번""
  File "<stdin>", line 1
    ""3번""
      ^
SyntaxError: invalid decimal literal
>>> """3번"""
'3번'
>>> a="881120-1068234"
>>> b="19"+a[0:6]
>>> c=a[7:]
>>> b
'19881120'
>>> c
'1068234'
>>> """4번"""
'4번'
>>> a="881120-1068234"
>>> a[7]
'1'
>>>
>>> """5번"""
'5번'
>>> a="a:b:c:d"
>>> a.replace(":","#")
'a#b#c#d'
>>>
>>> """6번"""
'6번'
>>> a=[1,3,5,4,2]
>>> a.sort()
>>> a
[1, 2, 3, 4, 5]
>>> a.reverse()
>>> a
[5, 4, 3, 2, 1]
>>>
>>> """7번"""
'7번'
>>> a=['Life','is','too','short']
>>> join(a)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'join' is not defined
>>> a.join
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'list' object has no attribute 'join'
>>> " ".join(a)
'Life is too short'
>>>
>>> """8번"""
'8번'
>>> a=(1,2,3)
>>> a + 4
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: can only concatenate tuple (not "int") to tuple
>>> a+"4"
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: can only concatenate tuple (not "str") to tuple
>>> b=(4)
>>> a+b
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: can only concatenate tuple (not "int") to tuple
>>> t1=(1,2,3)
>>> t1+4
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: can only concatenate tuple (not "int") to tuple
>>> t2=(4)
>>> t1+t2
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: can only concatenate tuple (not "int") to tuple
>>> t1 = (1,2,3)
>>> t2 = (4)
>>> t1+t2
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: can only concatenate tuple (not "int") to tuple
>>> t1 = 1,2,3
>>> t2 = 4
>>> t1+t2
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: can only concatenate tuple (not "int") to tuple
>>> 왜안되냐
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name '왜안되냐' is not defined
>>>
>>> "9번"
'9번'
>>> 패스
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name '패스' is not defined
>>>
>>> "10번"
'10번'
>>> a={'A':90, 'B':80, 'c':70}
>>> pop.a
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'pop' is not defined. Did you mean: 'pow'?
>>> pop(2)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'pop' is not defined. Did you mean: 'pow'?
>>> pop[2]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'pop' is not defined. Did you mean: 'pow'?
>>> a.pop[2]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'builtin_function_or_method' object is not subscriptable
>>> a.pop()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: pop expected at least 1 argument, got 0
>>> list.pop()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: unbound method list.pop() needs an argument
>>> a.pop(c)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
KeyError: '1068234'
>>>
>>> "11번"
'11번'
>>> a=[1,1,1,2,2,3,3,3,4,4,5]
>>> s1=set([1,1,1,2,2,3,3,3,4,4,5])
>>> s1
{1, 2, 3, 4, 5}
>>>
>>> 12번
  File "<stdin>", line 1
    12번
     ^
SyntaxError: invalid decimal literal
>>> a=b=[1,2,3]
>>> a[1]=4
>>> print(b)
[1, 4, 3]
>>> a is b
True
>>> id(a)
2888952841600
>>> id(b)
2888952841600
